--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,16 +14,16 @@ jobs:
       contents: write
     steps:
       - name: Checkout source
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        uses: actions/checkout@v4
 
       - name: Cache Jupyter
-        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
+        uses: actions/cache@v4
         with:
           path: .jupyter_cache
           key: quarto-${{ hashFiles('_quarto.yaml') }}
 
       - name: Set up uv
-        uses: astral-sh/setup-uv@1e862dfacbd1d6d858c55d9b792c756523627244 # v7
+        uses: astral-sh/setup-uv@v7
         with:
           activate-environment: true
 
@@ -33,17 +33,17 @@ jobs:
 
       - name: Set up Quarto
         # yamllint disable-line rule:line-length
-        uses: quarto-dev/quarto-actions/setup@8a96df13519ee81fd526f2dfca5962811136661b # v2
+        uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Render ${{ github.ref_name }} branch
         if: github.ref != 'refs/heads/main'
         # yamllint disable-line rule:line-length
-        uses: quarto-dev/quarto-actions/render@8a96df13519ee81fd526f2dfca5962811136661b # v2
+        uses: quarto-dev/quarto-actions/render@v2
 
       - name: Publish main branch
         if: github.ref == 'refs/heads/main'
         # yamllint disable-line rule:line-length
-        uses: quarto-dev/quarto-actions/publish@8a96df13519ee81fd526f2dfca5962811136661b # v2
+        uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
         env:
