--- a/_quarto.yaml
+++ b/_quarto.yaml
@@ -17,7 +17,7 @@ format:
     code-copy: true
     filters:
       - _filters/slugify.lua
-    footer: "{{< meta title >}} - <https://connoraird.github.io/talks>z"
+    footer: "{{< meta title >}} - <https://connoraird.github.io/talks>"
     hash-type: number
     history: false
     incremental: true
