--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -25,6 +25,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Cache pre-commit
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: cache-${{ hashFiles('./.pre-commit-config.yaml') }}
+
       - uses: actions/setup-python@v6
         with:
           python-version: "3.14"
