--- a/_quarto.yaml
+++ b/_quarto.yaml
@@ -7,7 +7,9 @@ execute:
 
 format:
   html:
-    theme: darkly
+    theme:
+      light: flatly
+      dark: darkly
   revealjs:
     auto-play-media: true
     auto-stretch: false
